refactor: change how dynamic dictionary are managed to be compatible with new process